// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallPlugin should not render if not open 1`] = `<DocumentFragment />`;

exports[`InstallPlugin should render 1st step 1`] = `
<DocumentFragment>
  <section
    data-testid="InstallPlugin__step--first"
  >
    <p
      class="mt-7 text-lg font-semibold text-theme-secondary-text"
    >
      This plugin needs the following permissions:
    </p>
    <div
      class="max-w-sm"
    >
      <ul
        class="mt-2 ml-5 leading-8 list-outside list-disc text-theme-secondary-text"
      >
        <li>
          Allows access to the currently active profile
        </li>
        <li>
          Allows access to the Payvo Wallet events
        </li>
        <li>
          Allows performing external web requests
        </li>
        <li>
          CUSTOM_PERMISSION
        </li>
      </ul>
    </div>
  </section>
</DocumentFragment>
`;

exports[`InstallPlugin should render 2st step with full download progress 1`] = `
<DocumentFragment>
  <section
    data-testid="InstallPlugin__step--second"
  >
    <div
      class="flex mt-8"
    >
      <div
        class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fBreXf bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 mr-6"
        data-testid="PluginImage"
      >
        <img
          alt="Logo"
          class="object-cover w-full h-full"
          src="https://payvo.com/logo.png"
        />
      </div>
      <div
        class="flex-1"
      >
        <div
          class="flex flex-col justify-around h-full"
        >
          <div>
            <p
              class="text-sm font-semibold text-theme-secondary-400"
            >
              Plugin
            </p>
            <p
              class="text-lg font-semibold text-theme-black"
            >
              My Plugin
            </p>
          </div>
          <div
            class="flex justify-between"
          >
            <span>
              <p
                class="text-sm font-semibold text-theme-secondary-400"
              >
                Downloading...
              </p>
              <p
                class="font-bold text-theme-secondary-text"
                data-testid="InstallPlugin__step--second__progress"
              >
                84.3 B / 100 B
              </p>
            </span>
            <div
              class="mr-2"
            >
              <svg
                height="50"
                viewBox="0 0 50 50"
                width="50"
              >
                <circle
                  cx="25"
                  cy="25"
                  fill="transparent"
                  r="23.5"
                  stroke="var(--theme-color-success-200)"
                  stroke-width="3"
                />
                <circle
                  cx="25"
                  cy="25"
                  fill="transparent"
                  r="23.5"
                  stroke="var(--theme-color-success-600)"
                  stroke-dasharray="147.6548547187203"
                  stroke-dashoffset="23.624776754995253"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="3"
                  transform="rotate(-90 25 25)"
                />
                <text
                  data-testid="CircularProgressBar__percentage"
                  dy="0.3em"
                  fill="var(--theme-color-success-600)"
                  font-size="0.8rem"
                  font-weight="600"
                  text-anchor="middle"
                  x="50%"
                  y="50%"
                >
                  <tspan>
                    84
                    <tspan
                      dy="-0.6em"
                      font-size="0.4rem"
                      font-weight="bold"
                    >
                      %
                    </tspan>
                  </tspan>
                </text>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`InstallPlugin should render 2st step with partial download progress 1`] = `
<DocumentFragment>
  <section
    data-testid="InstallPlugin__step--second"
  >
    <div
      class="flex mt-8"
    >
      <div
        class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fBreXf bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 mr-6"
        data-testid="PluginImage"
      >
        <svg>
          plugin-logo-placeholder.svg
        </svg>
      </div>
      <div
        class="flex-1"
      >
        <div
          class="flex flex-col justify-around h-full"
        >
          <div>
            <p
              class="text-sm font-semibold text-theme-secondary-400"
            >
              Plugin
            </p>
            <p
              class="text-lg font-semibold text-theme-black"
            >
              My Plugin
            </p>
          </div>
          <div
            class="flex justify-between"
          >
            <span>
              <p
                class="text-sm font-semibold text-theme-secondary-400"
              >
                Downloading...
              </p>
              <p
                class="font-bold text-theme-secondary-text"
                data-testid="InstallPlugin__step--second__progress"
              >
                0 B / 100 B
              </p>
            </span>
            <div
              class="mr-2"
            >
              <svg
                height="50"
                viewBox="0 0 50 50"
                width="50"
              >
                <circle
                  cx="25"
                  cy="25"
                  fill="transparent"
                  r="23.5"
                  stroke="var(--theme-color-success-200)"
                  stroke-width="3"
                />
                <circle
                  cx="25"
                  cy="25"
                  fill="transparent"
                  r="23.5"
                  stroke="var(--theme-color-success-600)"
                  stroke-dasharray="147.6548547187203"
                  stroke-dashoffset="147.6548547187203"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="3"
                  transform="rotate(-90 25 25)"
                />
                <text
                  data-testid="CircularProgressBar__percentage"
                  dy="0.3em"
                  fill="var(--theme-color-success-600)"
                  font-size="0.8rem"
                  font-weight="600"
                  text-anchor="middle"
                  x="50%"
                  y="50%"
                >
                  <tspan>
                    0
                    <tspan
                      dy="-0.6em"
                      font-size="0.4rem"
                      font-weight="bold"
                    >
                      %
                    </tspan>
                  </tspan>
                </text>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`InstallPlugin should render 3st step 1`] = `
<DocumentFragment>
  <section
    data-testid="InstallPlugin__step--third"
  >
    <p
      class="-mt-1 text-theme-secondary-text"
    >
      Would you like to enable the Plugin?
    </p>
    <div
      class="flex mt-8"
    >
      <div
        class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fBreXf bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 mr-6"
        data-testid="PluginImage"
      >
        <svg>
          plugin-logo-placeholder.svg
        </svg>
      </div>
      <div
        class="flex-1"
      >
        <div
          class="flex flex-col justify-around h-full"
        >
          <div>
            <p
              class="text-sm font-semibold text-theme-secondary-400"
            >
              Plugin
            </p>
            <p
              class="text-lg font-semibold text-theme-black"
            >
              My Plugin
            </p>
          </div>
          <div
            class="flex justify-between"
          >
            <span>
              <p
                class="text-sm font-semibold text-theme-secondary-400"
              >
                Installation
              </p>
              <p
                class="font-bold text-theme-secondary-text"
              >
                Completed
              </p>
            </span>
            <div
              class=""
            >
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb relative z-10 bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background"
              >
                <span
                  class="text-theme-success-600"
                >
                  <div
                    class="sc-bdnxRM AFVmm"
                    height="16"
                    width="16"
                  >
                    <svg>
                      check-mark.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb relative z-0 bg-theme-background border-theme-success-600 ring-theme-background"
              >
                <span
                  class="text-xs font-semibold text-theme-success-600"
                >
                  100%
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`InstallPlugin should render 3st step with plugin logo 1`] = `
<DocumentFragment>
  <section
    data-testid="InstallPlugin__step--third"
  >
    <p
      class="-mt-1 text-theme-secondary-text"
    >
      Would you like to enable the Plugin?
    </p>
    <div
      class="flex mt-8"
    >
      <div
        class="PluginImage__PluginImageWrapper-sc-10kztrf-0 fBreXf bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700 mr-6"
        data-testid="PluginImage"
      >
        <img
          alt="Logo"
          class="object-cover w-full h-full"
          src="https://payvo.com/logo.png"
        />
      </div>
      <div
        class="flex-1"
      >
        <div
          class="flex flex-col justify-around h-full"
        >
          <div>
            <p
              class="text-sm font-semibold text-theme-secondary-400"
            >
              Plugin
            </p>
            <p
              class="text-lg font-semibold text-theme-black"
            >
              My Plugin
            </p>
          </div>
          <div
            class="flex justify-between"
          >
            <span>
              <p
                class="text-sm font-semibold text-theme-secondary-400"
              >
                Installation
              </p>
              <p
                class="font-bold text-theme-secondary-text"
              >
                Completed
              </p>
            </span>
            <div
              class=""
            >
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb relative z-10 bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background"
              >
                <span
                  class="text-theme-success-600"
                >
                  <div
                    class="sc-bdnxRM AFVmm"
                    height="16"
                    width="16"
                  >
                    <svg>
                      check-mark.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb relative z-0 bg-theme-background border-theme-success-600 ring-theme-background"
              >
                <span
                  class="text-xs font-semibold text-theme-success-600"
                >
                  100%
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
